--- a/основы_python.ipynb
+++ b/основы_python.ipynb
@@ -1,87 +1,123 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "M-DGa20PaHnu"
+      },
       "source": [
         "#Задача 1\n",
         "Написать функцию на вход которой подается строка, состоящая из латинских букв.\n",
         "Функция должна вернуть количество гласных букв (a, e, i, o, u) в этой строке. Написать тесты для кода"
-      ],
-      "metadata": {
-        "id": "M-DGa20PaHnu"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Your code goes here"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "XvX8X_JJ6PCb"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "def count_vowels(s: str) -> int:\n",
+        "    vowels = {'a', 'e', 'i', 'o', 'u'}\n",
+        "    return sum(1 for char in s.lower() if char in vowels)\n",
+        "\n",
+        "\n",
+        "# Тесты\n",
+        "def test_count_vowels():\n",
+        "    assert count_vowels(\"hello\") == 2\n",
+        "    assert count_vowels(\"HELLO\") == 2\n",
+        "    assert count_vowels(\"xyz\") == 0\n",
+        "    assert count_vowels(\"\") == 0\n",
+        "\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    test_count_vowels()"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "t2ClV_Y0bbr6"
+      },
       "source": [
         "# Задача 2\n",
         "Написать функцию на вход, которой подается строка. Функция должна вернуть true, если\n",
         "каждый символ в строке встречается только 1 раз, иначе должна вернуть false. Написать тесты для кода"
-      ],
-      "metadata": {
-        "id": "t2ClV_Y0bbr6"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Your code goes here"
-      ],
+      "execution_count": 7,
       "metadata": {
         "id": "FppbECao6VIz"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "def all_unique_chars(s: str) -> bool:\n",
+        "    return len(s) == len(set(s))\n",
+        "\n",
+        "\n",
+        "# Тесты\n",
+        "def test_all_unique_chars():\n",
+        "    assert all_unique_chars(\"abcde\") is True\n",
+        "    assert all_unique_chars(\"aabc\") is False\n",
+        "    assert all_unique_chars(\"\") is True\n",
+        "    assert all_unique_chars(\"AaBb\") is True\n",
+        "    assert all_unique_chars(\"Hello\") is False\n",
+        "    assert all_unique_chars(\"Python\") is True\n",
+        "\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    test_all_unique_chars()\n"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "udRiIK1cdt6E"
+      },
       "source": [
         "# Задача 3\n",
         "Написать функцию, которая принимает положительное число и возвращает количество\n",
         "бит равных 1 в этом числе. Написать тесты для кода"
-      ],
-      "metadata": {
-        "id": "udRiIK1cdt6E"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Your code goes here"
-      ],
+      "execution_count": 8,
       "metadata": {
         "id": "6tkfDJRz6dp_"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "def count_bits(n: int) -> int:\n",
+        "    if n < 0:\n",
+        "        raise ValueError(\"Число должно быть положительным\")\n",
+        "    return bin(n).count(\"1\")\n",
+        "\n",
+        "\n",
+        "# Тесты\n",
+        "def test_count_bits():\n",
+        "    assert count_bits(0) == 0\n",
+        "    assert count_bits(1) == 1\n",
+        "    assert count_bits(5) == 2  \n",
+        "    assert count_bits(7) == 3\n",
+        "    assert count_bits(8) == 1\n",
+        "    assert count_bits(255) == 8\n",
+        "    assert count_bits(1023) == 10\n",
+        "\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    test_count_bits()\n"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "26dDUz-Ae17N"
+      },
       "source": [
         "# Задача 4\n",
         "Написать функцию, которая принимает положительное число. Функция должна вернуть то,\n",
@@ -92,118 +128,268 @@
         "· 4 функция должна вернуть 0, так как число уже состоит из одной цифры\n",
         "· 999 функция должна вернуть 4, так как 9*9*9=729 => 7*2*9=126 => 1*2*6=12 =>\n",
         "1*2=2. Написать тесты для кода"
-      ],
-      "metadata": {
-        "id": "26dDUz-Ae17N"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "def magic(n):\n",
-        "    # Your code goes here\n",
-        "    pass"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "BH1A_Mgi6i4G"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "def magic(n: int) -> int:\n",
+        "    if n < 0:\n",
+        "        raise ValueError(\"Число должно быть положительным\")\n",
+        "\n",
+        "    steps = 0\n",
+        "    while n >= 10:\n",
+        "        product = 1\n",
+        "        for digit in str(n):\n",
+        "            product *= int(digit)\n",
+        "        n = product\n",
+        "        steps += 1\n",
+        "\n",
+        "    return steps\n",
+        "\n",
+        "\n",
+        "def test_magic():\n",
+        "    assert magic(39) == 3\n",
+        "    assert magic(4) == 0\n",
+        "    assert magic(999) == 4\n",
+        "    assert magic(25) == 2\n",
+        "    assert magic(77) == 4\n",
+        "    assert magic(10) == 1\n",
+        "    assert magic(1) == 0\n",
+        "\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    test_magic()\n"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "0nS-kIa8g8vd"
+      },
       "source": [
         "# Задача 5\n",
         "Написать функцию, которая принимает два целочисленных вектора одинаковой длины и\n",
         "возвращает среднеквадратическое отклонение двух векторов. Написать тесты для кода"
-      ],
-      "metadata": {
-        "id": "0nS-kIa8g8vd"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "def mse(pred, true):\n",
-        "    # Your code goes here\n",
-        "    pass"
-      ],
+      "execution_count": 9,
       "metadata": {
         "id": "8iphx4LM6xbx"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "import math\n",
+        "\n",
+        "def mse(vec1: list[int], vec2: list[int]) -> float:\n",
+        "    if len(vec1) != len(vec2):\n",
+        "        raise ValueError(\"Векторы должны быть одинаковой длины\")\n",
+        "    if not vec1:\n",
+        "        raise ValueError(\"Векторы не должны быть пустыми\")\n",
+        "    return math.sqrt(sum((a - b) ** 2 for a, b in zip(vec1, vec2)) / len(vec1))\n",
+        "\n",
+        "\n",
+        "def test_mse():\n",
+        "    assert abs(mse([1, 2, 3], [1, 2, 3]) - 0) < 1e-9\n",
+        "    assert abs(mse([1, 2, 3], [2, 3, 4]) - 1) < 1e-9\n",
+        "    assert abs(mse([0, 0, 0], [3, 4, 0]) - math.sqrt((9 + 16 + 0) / 3)) < 1e-9\n",
+        "    assert abs(mse([-1, -2], [1, 2]) - math.sqrt(((2**2) + (4**2)) / 2)) < 1e-9\n",
+        "\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    test_mse()\n"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "vpIPKL439zkw"
+      },
       "source": [
         "# Задача 6\n",
         "Написать функцию, принимающая целое положительное число. Функция должна вернуть\n",
         "строку вида “(n1**p1)(n2**p2)…(nk**pk)” представляющая разложение числа на простые\n",
         "множители (если pi == 1, то выводить только ni).\n",
         "Например, для числа 86240 функция должна вернуть “(2**5)(5)(7**2)(11)”. Написать тесты для кода"
-      ],
-      "metadata": {
-        "id": "vpIPKL439zkw"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Your code goes here"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "pFebmcZk94Jw"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "def prime_factors(n: int) -> str:\n",
+        "    if n <= 0:\n",
+        "        raise ValueError(\"Число должно быть положительным\")\n",
+        "\n",
+        "    factors = {}\n",
+        "    divisor = 2\n",
+        "    while n > 1:\n",
+        "        count = 0\n",
+        "        while n % divisor == 0:\n",
+        "            n //= divisor\n",
+        "            count += 1\n",
+        "        if count > 0:\n",
+        "            factors[divisor] = count\n",
+        "        divisor += 1\n",
+        "        if divisor * divisor > n and n > 1:\n",
+        "            factors[n] = 1\n",
+        "            break\n",
+        "\n",
+        "    result = \"\"\n",
+        "    for prime, power in sorted(factors.items()):\n",
+        "        if power == 1:\n",
+        "            result += f\"({prime})\"\n",
+        "        else:\n",
+        "            result += f\"({prime}**{power})\"\n",
+        "    return result\n",
+        "\n",
+        "\n",
+        "def test_prime_factors():\n",
+        "    assert prime_factors(86240) == \"(2**5)(5)(7**2)(11)\"\n",
+        "    assert prime_factors(360) == \"(2**3)(3**2)(5)\"\n",
+        "    assert prime_factors(13) == \"(13)\"\n",
+        "    assert prime_factors(100) == \"(2**2)(5**2)\"\n",
+        "    assert prime_factors(1) == \"\"\n",
+        "\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    test_prime_factors()\n"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "ps2s0BudX7A2"
+      },
       "source": [
         "# Задача 7\n",
         "Написать функцию, принимающая целое число n, задающее количество кубиков. Функция\n",
         "должна определить, можно ли из данного кол-ва кубиков построить пирамиду, то есть\n",
         "можно ли представить число n как 1^2+2^2+3^2+…+k^2. Если можно, то функция должна\n",
         "вернуть k, иначе строку “It is impossible”. Написать тесты для кода"
-      ],
-      "metadata": {
-        "id": "ps2s0BudX7A2"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "def pyramid(number):\n",
-        "    # Your code goes here\n",
-        "    pass"
-      ],
+      "execution_count": 10,
       "metadata": {
         "id": "3YPjEXxhX_YT"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "def pyramid(n: int):\n",
+        "    if n <= 0:\n",
+        "        raise ValueError(\"Число должно быть положительным\")\n",
+        "\n",
+        "    total = 0\n",
+        "    k = 0\n",
+        "    while total < n:\n",
+        "        k += 1\n",
+        "        total += k ** 2\n",
+        "        if total == n:\n",
+        "            return k\n",
+        "    return \"It is impossible\"\n",
+        "\n",
+        "\n",
+        "def test_pyramid_height():\n",
+        "    assert pyramid(1) == 1\n",
+        "    assert pyramid(5) == 2\n",
+        "    assert pyramid(14) == 3\n",
+        "    assert pyramid(30) == 4\n",
+        "    assert pyramid(55) == 5\n",
+        "    assert pyramid(15) == \"It is impossible\"\n",
+        "    assert pyramid(2) == \"It is impossible\"\n",
+        "\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    test_pyramid_height()\n"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "KeKgmIdAQMEJ"
+      },
       "source": [
         "# Задача 8\n",
         "Функция принимает на вход положительное число и определяет является ли оно сбалансированным, т.е. сумма цифр до средних равна сумме цифр после. Средними в случае нечетного числа цифр считать одну цифру, в случае четного - две средних. Написать тесты для кода"
-      ],
-      "metadata": {
-        "id": "KeKgmIdAQMEJ"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Your code goes here"
-      ],
+      "execution_count": 11,
       "metadata": {
         "id": "gMAAqtqlQrZt"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "def is_balanced_number(n: int) -> bool:\n",
+        "    if n <= 0:\n",
+        "        raise ValueError(\"Число должно быть положительным\")\n",
+        "\n",
+        "    digits = [int(d) for d in str(n)]\n",
+        "    length = len(digits)\n",
+        "\n",
+        "    if length == 1:\n",
+        "        return True\n",
+        "\n",
+        "    mid = length // 2\n",
+        "    if length % 2 == 0:\n",
+        "        left = digits[:mid - 1]\n",
+        "        right = digits[mid + 1:]\n",
+        "    else:\n",
+        "        left = digits[:mid]\n",
+        "        right = digits[mid + 1:]\n",
+        "\n",
+        "    return sum(left) == sum(right)\n",
+        "\n",
+        "\n",
+        "def test_is_balanced_number():\n",
+        "    assert is_balanced_number(1234006) is True\n",
+        "    assert is_balanced_number(12321) is True\n",
+        "    assert is_balanced_number(123321) is True\n",
+        "    assert is_balanced_number(123456) is False\n",
+        "    assert is_balanced_number(7) is True\n",
+        "    assert is_balanced_number(1230321) is True\n",
+        "\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    test_is_balanced_number()\n"
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.12.4"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
